--- a/backstage/packages/app/package.json
+++ b/backstage/packages/app/package.json
@@ -28,6 +28,7 @@
     "@backstage/plugin-catalog-graph": "^0.4.21",
     "@backstage/plugin-catalog-import": "^0.13.3",
     "@backstage/plugin-catalog-react": "^1.19.1",
+    "@backstage/plugin-home": "^0.8.10",
     "@backstage/plugin-kubernetes": "^0.12.9",
     "@backstage/plugin-org": "^0.6.41",
     "@backstage/plugin-permission-react": "^0.4.36",
